[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MusicController.gd" type="Script" id=1]
[ext_resource path="res://assets/musics/main musics/Solve The Puzzle.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/musics/sound effects/Open Event.wav" type="AudioStream" id=3]

[node name="MusicController" type="Node"]
script = ExtResource( 1 )

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="EventSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
